--- a/config.json
+++ b/config.json
@@ -7,6 +7,6 @@
     "time_column_width": 73,
     "row_height": 15,
     "data_directory": "C:\\Users\\abrah\\.__Scheduler App Data__",
-    "output_directory": "C:\\Users\\abrah\\Desktop"
+    "output_path": "C:\\Users\\abrah\\Desktop\\scheduleTest.jpg"
 }
 
