Updated config to write to the current repo directory by default, and added this default path to .gitignore

--- a/config.json
+++ b/config.json
@@ -7,6 +7,6 @@
     "time_column_width": 73,
     "row_height": 15,
     "data_directory": "C:/Users/abrah/.__Scheduler App Data__",
-    "output_path": "C:/Users/abrah/Desktop/scheduleTest.jpg"
+    "output_path": "scheduleTest.jpg"
 }
 
