--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,6 @@
     "time_column_width": 73,
     "row_height": 15,
     "data_directory": "data",
-    "output_path": "scheduleTest.jpg"
+    "output_path": "schedule.jpg"
 }
 
